--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto falso</title>
 </head>
+
 <body>
     <h1>Bienvenidos </h1>
-    
+
+    <h2>segundo commit</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, repellat. Dicta error veniam nesciunt asperiores
+        obcaecati unde, et accusantium officiis dolorem, rerum nemo ab doloribus? Quas corporis culpa ipsum dignissimos.
+    </p>
+
 </body>
+
 </html>
