creamos el footer en la rama de prueba

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         obcaecati unde, et accusantium officiis dolorem, rerum nemo ab doloribus? Quas corporis culpa ipsum dignissimos.
     </p>
  <h3>tercer commit ultima version</h3>
+ <h4>footer rama</h4>
+ <p>todos los derechos reservados</p>
 </body>
 
 </html>
